<resources>
    <string name="app_name">ROM Control</string>
    <string name="title_activity_main">ROM Control</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="user_interface">Interface</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="menu_main_activity_change_locale">Blank!</string>
    <string name="header_statusbar">Statusbar</string>
    <string name="header_navbar">Navigation Bar</string>
    <string name="toggles_layout">Toggles</string>
    <string name="general_ui">General UI</string>
    <string name="statusbar_notifications">Notifications</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="signal">Signal</string>
    <string name="nav_bar">Navigation Bar</string>
    <string name="power_menu">Power Menu</string>
    <string name="led_options">LED</string>
    <string name="spen_options">S Pen Gestures</string>
    <string name="header_system">System</string>
    <string name="sound">Sound</string>
    <string name="lockscreen_options">Lockscreen</string>
    <string name="title_ribbon">Ribbons</string>
    <string name="weather">Weather</string>
    <string name="tools">Tools</string>
    <string name="installer">Installer</string>
    <string name="active_display">Active Display</string>
    <string name="title_about">About AOKP</string>
    <string name="title_ui">General User Interface</string>
    <string name="title_statusbar">Statusbar</string>
    <string name="title_statusbar_notifications">Notifications</string>
    <string name="title_statusbar_clock">Statusbar Clock</string>
    <string name="title_statusbar_toggles">Statusbar Toggles</string>
    <string name="title_statusbar_battery">Statusbar Battery</string>
    <string name="title_statusbar_signal">Statusbar Signal</string>
    <string name="title_navbar">Navigation Bar</string>
    <string name="title_navring">Navigation Ring</string>
    <string name="title_power_menu">Power Menu</string>
    <string name="title_led">LED Control</string>
    <string name="title_spen">S Pen Gestures</string>
    <string name="title_lockscreens">Lockscreen Options</string>
    <string name="title_lockscreens_targets">Lockscreen Targets</string>
    <string name="title_sound">Sound Settings</string>
    <string name="title_weather">Weather Settings</string>
    <string name="title_performance">Performance Settings</string>
    <string name="title_installer">Installer Settings</string>
    <string name="title_clipboard_share">Share to Clipboard</string>
    <string name="ribbon_settings_title">Ribbons</string>
    <string name="title_hardware_keys">Hardware Keys</string>
    <string name="mgerrit_activity_name">mGerrit</string>
    <string name="header_summary_clock">@null</string>
    <string name="header_summary_toggles">@null</string>
    <string name="header_summary_notifications">@null</string>
    <string name="header_summary_general_ui">@null</string>
    <string name="header_summary_battery">@null</string>
    <string name="header_summary_signal">@null</string>
    <string name="header_summary_navigation_bar">@null</string>
    <string name="header_summary_power_menu">@null</string>
    <string name="header_summary_led">@null</string>
    <string name="header_summary_spen">@null</string>
    <string name="header_summary_sound">@null</string>
    <string name="header_summary_performance">@null</string>
    <string name="header_summary_lockscreens">@null</string>
    <string name="header_summary_weather">@null</string>
    <string name="header_summary_vibrations">@null</string>
    <string name="header_summary_summary">@null</string>
    <string name="header_summary_installer">@null</string>
    <string name="header_summary_hardware_keys">@null</string>
    <string name="header_summary_activedisplay">@null</string>
    <string name="menu_nav_bar_reset">Reset nav bar</string>
    <string name="menu_ribbon_reset">Reset ribbon</string>
    <string name="menu_ribbon_apps">Reset apps</string>
    <string name="menu_ribbon_rearrange">Rearrange ribbon</string>
    <string name="menu_ribbon_hide">Hide apps</string>
    <string name="menu_ribbon_toggles">Setup toggles</string>
    <string name="menu_ribbon_na">Not available</string>
    <string name="menu_ribbon_toggles_error">Toggles are only available for the left and right swipe ribbons.</string>
    <string name="menu_lockscreens_reset">Reset lockscreen wallpaper</string>
    <string name="enable_bootanimation_unlock">To Unlock: uncheck \"disable boot animation\"</string>
    <string name="enable_phone_or_phablet">To Unlock: enable phone or phablet \"UI mode\"</string>
    <string name="enable_tablet_ui">To Unlock: enable tablet \"UI mode\"</string>
    <string name="enable_noti_wallpaper">To Unlock: enable phone or phablet \"UI mode\" and set a
        \"notification background\"
    </string>
    <string name="enable_crt_mode">To Unlock: check \"CRT screen off\"</string>
    <string name="enable_menu_location">To Unlock: enable a \"menu location\"</string>
    <string name="enable_hiding_navbar">To Unlock: \"enable hidden NavBar\"</string>
    <string name="enable_hiding_systembar">To Unlock: \"enable hidden SystemBar\"</string>
    <string name="enable_audio_mode">To Unlock: enable \"face down audio mode\"</string>
    <string name="enable_battery_bar">To Unlock: enable a \"battery bar location\"</string>
    <string name="enable_clock_location">To Unlock: enable a \"clock style\"</string>
    <string name="enable_signal_text">To Unlock: set \"signal indicator style\" to display text or dBm</string>
    <string name="enable_wifi_text">To Unlock: set \"WiFi signal indicator style\" to display text</string>
    <string name="enable_toggle_tiles">To Unlock: set \"toggle style\" to tiles</string>
    <string name="enable_fasttoggle">To Unlock: \"enable fast toggle\" and tiles \"toggle style\"</string>
    <string name="enable_favorite_toggle">To Unlock: enable a \"favorite contact\" toggle here or in a Ribbon</string>
    <string name="enable_screenshot_toggle">To Unlock: enable a \"screenshot\" toggle here or in a Ribbon</string>
    <string name="enable_custom_toggle">To Unlock: enable a \"custom\" toggle here or in a Ribbon</string>
    <string name="enable_spen_gestures">To Unlock: \"enable S Pen gestures\" </string>
    <string name="enable_persist_installer">To Unlock: \"enable persistence\"</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="title_show_power_saver">Power Saver</string>
    <string name="title_show_screenshot">Screenshot</string>
    <string name="title_show_torch_toggle">Torch</string>
    <string name="title_show_airplane_toggle">Airplane mode</string>
    <string name="title_show_navbar_hide">System Bar toggles</string>
    <string name="title_show_volume_state_toggle">Volume states</string>
    <string name="title_show_reboot_keyguard">Lockscreen reboot</string>
    <string name="spen_left_title">Action on swipe left</string>
    <string name="spen_right_title">Action on swipe right</string>
    <string name="spen_up_title">Action on swipe up</string>
    <string name="spen_down_title">Action on swipe down</string>
    <string name="spen_double_title">Action on double tap</string>
    <string name="spen_long_title">Action on longpress</string>
    <string name="spen_enable">Enable S Pen Gestures</string>
    <string name="spen_enable_summary">Set custom actions for S Pen gestures</string>
    <string name="spen_extras_cat">S Pen extras</string>
    <string name="spen_gestures_cat">S Pen Gestures</string>
    <string name="enable_stylus_pointer_title">Enable S Pen pointer</string>
    <string name="enable_stylus_pointer_summary">Enable the mouse icon when using the S Pen</string>
    <string name="persist_options">Persistence</string>
    <string name="persist_enable">Enable Persistence</string>
    <string name="persist_enable_summary">Enable data to persist across installs</string>
    <string name="persist_prop_density">Persist Density</string>
    <string name="persist_prop_density_summary">Persist LCD density</string>
    <string name="persist_file_hosts">Persist Hosts</string>
    <string name="persist_file_hosts_summary">Persist hosts file</string>
    <string name="persist_file_xposed">Persist Xposed</string>
    <string name="persist_file_xposed_summary">Persist file app_process for Xposed framework</string>
    <string name="persist_file_xposed_notinstalled">XposedInstaller is not installed</string>
    <string name="title_pref_powersaving_pref_mode">Enable power saver</string>
    <string name="summary_pref_powersaving_pref_mode">@null</string>
    <string name="title_pref_powersaving_data_screen_off">Screen off data action</string>
    <string name="summary_pref_powersaving_data_screen_off">What to do with the data when the screen turns off</string>
    <string name="title_pref_powersaving_data_screen_off_delay">Data action delay</string>
    <string name="summary_pref_powersaving_data_screen_off_delay">How long to wait before applying data action?</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="group_applications">Applications</string>
    <string name="devs">The Crew</string>
    <string name="aokp">Android Open Kang Project</string>
    <string name="aokp_website_title">AOKP Website</string>
    <string name="aokp_website_summary">www.aokp.co - Find all newest releases here.</string>
    <string name="aokp_review_title">AOKP Code Review - Gerrit</string>
    <string name="aokp_review_summary">View AOKP\'s Gerrit instance</string>
    <string name="aokp_irc_title">Join us on IRC</string>
    <string name="aokp_irc_summary">#teamkang @ irc.freenode.net</string>
    <string name="about_aokp">About AOKP</string>
    <string name="about_aokp_summary">@null</string>
    <string name="donate_aokp">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=DBBCGTVJ984YG
    </string>
    <string name="github_aokp">https://github.com/AOKP</string>
    <string name="github_adam">https://github.com/syaoran12</string>
    <string name="github_akellar">https://github.com/akellar</string>
    <string name="github_bajee11">https://github.com/Bajee11</string>
    <string name="github_bmc08gt">https://github.com/BMc08GT</string>
    <string name="github_birdman">https://github.com/mrbirdman</string>
    <string name="github_championswimmer">https://github.com/championswimmer</string>
    <string name="github_DAGr8">https://github.com/DAGr8</string>
    <string name="github_dhacker29">https://github.com/dhacker29</string>
    <string name="github_graffixnyc">https://github.com/graffixnyc</string>
    <string name="github_hashcode">https://github.com/Hashcode</string>
    <string name="github_willdeberry">https://github.com/willdeberry</string>
    <string name="battery_bar_animate_title">Enable charging animation</string>
    <string name="battery_bar_animate_summary">Enabling the charging animation may result in a poor user experience.
        Enable at your own discretion.
    </string>
</resources>